test_private/99_error_log/2025-04-09_15-22-48/0_test_get_gds_bounding_box_0.ipynb.txt
Error occurred in: C:\my_things\disk_backup\4_QEDA\0_tianyan_proj\3_EDA_Q_codeup\test_private\0_test_get_gds_bounding_box\0.ipynb
================================================================================
Traceback (most recent call last):
  File "C:\my_things\disk_backup\4_QEDA\0_tianyan_proj\3_EDA_Q_codeup\test_private\run_all_ipynb.py", line 90, in execute_notebook_without_interruption
    ep.preprocess(notebook, {'metadata': {'path': current_dir}})
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\nbconvert\preprocessors\execute.py", line 103, in preprocess
    self.preprocess_cell(cell, resources, index)
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\nbconvert\preprocessors\execute.py", line 124, in preprocess_cell
    cell = self.execute_cell(cell, index, store_history=True)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_core\utils\__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\asyncio\base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\nbclient\client.py", line 1062, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\nbclient\client.py", line 918, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# import sys
# sys.path.append("../..")
from api.design import Design
from addict import Dict
------------------


[1;31m---------------------------------------------------------------------------[0m
[1;31mModuleNotFoundError[0m                       Traceback (most recent call last)
Cell [1;32mIn[1], line 3[0m
[0;32m      1[0m [38;5;66;03m# import sys[39;00m
[0;32m      2[0m [38;5;66;03m# sys.path.append("../..")[39;00m
[1;32m----> 3[0m [38;5;28;01mfrom[39;00m [38;5;21;01mapi[39;00m[38;5;21;01m.[39;00m[38;5;21;01mdesign[39;00m [38;5;28;01mimport[39;00m Design
[0;32m      4[0m [38;5;28;01mfrom[39;00m [38;5;21;01maddict[39;00m [38;5;28;01mimport[39;00m Dict

[1;31mModuleNotFoundError[0m: No module named 'api'

